# bashara

./: README.md
examples/: CMakeLists.txt  Protonect.cpp  build.sh
examples/json_spirit/: CMakeLists.txt
examples/pretrained/resnet50_scratch_caffe/: ReadMe.txt
examples/streamer/: CMakeLists.txt  build.sh  connection.hpp  dbconnector.cpp  dbconnector.h  main.cpp  mjpeg_server.cpp  mjpeg_server.hpp  request_objects.cpp  server.cpp
